manifest/objects/CPQU__Related_List_Field__c.object
<CustomObject>
    <fields>
        <fullName>CPQU__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether this related list field is active or not.</description>
        <inlineHelpText>Indicates whether this related list field is active or not.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQU__Advanced_Condition__c</fullName>
        <description>Can only be entered if the Conditions Met is Custom. Enter a combination of the Condition Index #s, AND, OR, and parenthesis (e.g. (123 AND 124) AND 125).</description>
        <inlineHelpText>Can only be entered if the Conditions Met is Custom. Enter a combination of the Condition Index #s, AND, OR, and parenthesis (e.g. (123 AND 124) AND 125).</inlineHelpText>
        <label>Advanced Condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CPQU__Conditions_Met__c</fullName>
        <description>Choose the behavior for your conditions: All is AND, Any is OR, Custom is a combination of AND/OR.</description>
        <inlineHelpText>Choose the behavior for your conditions: All is AND, Any is OR, Custom is a combination of AND/OR.</inlineHelpText>
        <label>Conditions Met</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPQU__Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if you would like this column hidden in the list.  A common use of this field is when you want to sort by a field that you do not want to display as a column.</description>
        <inlineHelpText>Check this box if you would like this column hidden in the list.  A common use of this field is when you want to sort by a field that you do not want to display as a column.</inlineHelpText>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQU__Index__c</fullName>
        <description>Specify the order of display for this related list field. The fields are displayed in the order in which their Index values are numbered.</description>
        <inlineHelpText>Specify the order of display for this related list field. The fields are displayed in the order in which their Index values are numbered.</inlineHelpText>
        <label>Index</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQU__Order_By_Index__c</fullName>
        <label>Order By Index</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQU__Order_By_Type__c</fullName>
        <label>Order By Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASC</fullName>
                    <label>Ascending</label>
                </value>
                <value>
                    <fullName>DESC</fullName>
                    <label>Descending</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPQU__Order_By__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order By</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQU__Related_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related List</label>
        <referenceTo>CPQU__Related_List__c</referenceTo>
        <relationshipLabel>Columns</relationshipLabel>
        <relationshipName>Columns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPQU__Target_Field__c</fullName>
        <label>Target Field</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SBQQ__CustomerTotal__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__Group__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__ListPrice__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__NetTotal__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__Number__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__Product__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__ProductName__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__Quantity__c</fullName>
                </value>
                <value>
                    <fullName>Name</fullName>
                </value>
                <value>
                    <fullName>Id</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPQU__Target_Object2__c</fullName>
        <formula>TEXT(CPQU__Related_List__r.CPQU__Target_Object__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Object</label>
        <type>Text</type>
    </fields>
    <label>Related List Field</label>
    <listViews>
        <fullName>CPQU__All</fullName>
        <columns>NAME</columns>
        <columns>CPQU__Related_List__c</columns>
        <columns>CPQU__Target_Object2__c</columns>
        <columns>CPQU__Target_Field__c</columns>
        <columns>CPQU__Conditions_Met__c</columns>
        <columns>CPQU__Advanced_Condition__c</columns>
        <columns>CPQU__Index__c</columns>
        <columns>CPQU__Order_By__c</columns>
        <columns>CPQU__Order_By_Type__c</columns>
        <columns>CPQU__Order_By_Index__c</columns>
        <columns>CPQU__Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related List Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CPQU__IfCondMetIsCustom_AdvCondRequired</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(CPQU__Conditions_Met__c) = &quot;Custom&quot; &amp;&amp; ISBLANK(CPQU__Advanced_Condition__c)</errorConditionFormula>
        <errorDisplayField>CPQU__Advanced_Condition__c</errorDisplayField>
        <errorMessage>Advanced Condition is required if Conditions Met is &quot;Custom&quot;.</errorMessage>
    </validationRules>
</CustomObject>